package com.fos.sdk.core;

public enum ResourceState {
    DRAFT, ACTIVE, ARCHIVED
}
